# engine

./: .gitignore  .lintstagedrc.json  .npmignore  .prettierignore  .releaserc.json  CLAUDE.md  CONTRIBUTING.md  README.md  commitlint.config.cjs  commitlint.config.js  eslint.config.mjs  jest.config.cjs  jest.d.ts  jest.resolver.cjs  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  tsup.config.ts
.chorenzo/: analysis.json  state.json
.claude/: settings.json
.github/workflows/: build.yml  ci.yml  pr-check.yml  release.yml  test.yml
.husky/: commit-msg
docs/: recipes.md
src/: Shell.tsx  main.ts  setup.test.ts  test-setup.ts
src/commands/: analysis-validate.ts  analysis.validate.test.ts  analysis.validate.ts  analyze.test.ts  analyze.ts  analyze.tsx  auth.test.ts  auth.ts  init.test.ts  init.ts  init.tsx  recipes.apply.test.ts  recipes.apply.ts  recipes.generate.test.ts  recipes.generate.ts  recipes.list.test.ts  recipes.list.ts  recipes.review.test.ts  recipes.review.ts  recipes.shared.ts  recipes.show.test.ts  recipes.show.ts  recipes.test-utils.ts  recipes.test.ts  recipes.ts  recipes.validate-state.test.ts  recipes.validate-state.ts  recipes.validate.test.ts  recipes.validate.ts
src/components/: AnalysisDisplay.tsx  AnalysisFlow.tsx  AnalysisFlowStep.tsx  AnalysisProgress.tsx  AnalysisPrompt.tsx  AnalysisResultDisplay.tsx  AnalysisStep.tsx  ApplyDisplay.tsx  ApplyProgress.tsx  AuthenticationStep.tsx  Shell.tsx  (+23 more)
test-fixtures/monorepo/apps/api-service/: pyproject.toml  requirements.txt
test-fixtures/monorepo/apps/api-service/src/: main.py
(+100 files in other folders)
